feat(project): update more